<resources>
    <string name="app_name">Suit Game V.3</string>
    <string name="splash_screen_image_1">Splash Screen Image 1</string>
    <string name="splash_screen_image_2">Splash Screen Image 2</string>
    <string name="on_boarding_one_image">On Boarding One Image</string>
    <string name="on_boarding_title_one">Bermain suit melaman sesama \npemain.</string>
    <string name="on_boarding_two_image">On Boarding Two Image</string>
    <string name="on_boarding_title_two">Bermain suit melaman sesama \nkomputer.</string>
    <string name="on_boarding_three_image">On Boarding Three Image</string>
    <string name="on_boarding_title_three">Tuliskan namamu dibawah</string>
    <string name="enter_your_name_here">Enter your name here</string>
    <string name="icon_next">Icon Next</string>
    <string name="choose_your_opponent">PILIH LAWANMU</string>
    <string name="vs">vs</string>
    <string name="com">com</string>
    <string name="player2">Pemain 2</string>
    <string name="cpu">CPU</string>
    <string name="draw">Seri</string>
    <string name="pemain1menang">Pemain 1 MENANG!</string>
    <string name="pemain2menang">Pemain 2 MENANG!</string>
    <string name="result_match">Hasil Permainan</string>
    <string name="rematch">Main Lagi</string>
    <string name="back_to_menu">Kembali Ke Menu</string>
    <string name="option_versus_player">Option Versus Player</string>
    <string name="option_versus_computer">Option Versus Computer</string>
    <string name="logo_image">Logo Name</string>
    <string name="title_player_1">Title player 1</string>
    <string name="title_player_com">Title player Com</string>
    <string name="option_rock_player_1">Option Rock Player 1</string>
    <string name="refresh_button">Refresh button</string>
    <string name="result">Result</string>
    <string name="close">Close</string>
    <string name="player_1">Player 1</string>
    <string name="versus_player">" vs Pemain"</string>
    <string name="versus_computer">" vs CPU"</string>
    <string name="rock">rock</string>
    <string name="paper">paper</string>
    <string name="scissor">scissor</string>
</resources>