<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainActivity"
    android:background="@color/colorLightBlue"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/tvTitleChooseYourOpponent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/comic_sans"
        android:text="@string/choose_your_opponent"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/ivVersusPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivVersusPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/option_versus_player"
        app:layout_constraintBottom_toTopOf="@id/tvVersusPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleChooseYourOpponent" />

    <TextView
        android:id="@+id/tvVersusPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_sans"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/ivVersusCom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivVersusPlayer" />

    <ImageView
        android:id="@+id/ivVersusCom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/option_versus_computer"
        app:layout_constraintBottom_toTopOf="@id/tvVersusCom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvVersusPlayer" />

    <TextView
        android:id="@+id/tvVersusCom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_sans"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivVersusCom" />

</androidx.constraintlayout.widget.ConstraintLayout>